# Artificial_Insulter

./: .gitignore  CMakeLists.txt
data/: ShitTalkTable.csv  ShitTalkTable_Filtered.csv  shittalk.cfg  shittalk.txt  shittalkCleaned.txt
main/TalkingEliza/: CMakeLists.txt
main/TalkingEliza/src/: main.cpp  ofBitchSkeletonApp.cpp  ofBitchSkeletonApp.h
main/pythonChatter/: Chatter.py  Insulter.py  chatterApp_1Elisa.py  chatterLearning.py  chatterRating.py  chatterTesting.py  cleanupData.ipynb  databaseTest.json  dialog.py  insulterFromDatabase.py  keywords.txt  requirementsChatter.txt  requirementsExtra  requirementsPeterSkipThoughtVector.txt
main/test/: CMakeLists.txt
python/: Insulter.py  cleanupData.ipynb  dataProcessing.ipynb  insulterFromDatabase.py  randomInsulter.py  textProcessorOSC.py
research/TalkingEliza/: CMakeLists.txt
research/TalkingEliza-master/: addons.make
research/TalkingEliza-master/src/: testApp.cpp  testApp.h
research/TalkingEliza/TalkingEliza.xcodeproj/: project.pbxproj
research/TalkingEliza/src/: ElisaKoraApp.cpp  ElisaKoraApp.h  main.cpp  ofBitchSkeletonApp.cpp  ofBitchSkeletonApp.h  testApp.cpp  testApp.h
research/peter/StoryTeller/: DataDownloads.txt  Test.ipynb  config.py  requirementsCurrent.txt
research/peter/oscChatOF_Example/: CMakeLists.txt
research/peter/oscCommunication/: CMakeLists.txt
research/pythonNotebooks/: test.ipynb
shared/: ConversationEliza.cpp  ConversationEliza.h  ConversationOSC.cpp  ConversationOSC.h  TalkerEliza.cpp  TalkerEliza.h  Tokenizer.cpp  Tokenizer.h  bitcherOSC.cpp  bitcherOSC.h
(+14 files in other folders)
